tried correcting carousel control positions on small screens but nothing changed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -268,16 +268,15 @@ label {
 .carousel-caption {
 	font-size: 2rem;
 	color: rgba(255,255,255,1.0);
-	margin: 0 auto;
 	text-align: center;
 	justify-content: center;
 	align-items: center;
 	background-color:rgba(217,3,104,0.7);
 }
-.carousel-control-prev-icon,.carousel-control-next-icon {
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
 	background-color: #D90368;
 	color: #D90368;
-	margin: 0 auto;
 	text-align: center;
 	justify-content: center;
 	align-items: center;
